# lldoc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.api  README.md  docker-compose.coolify.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
app/: __init__.py  chunking.py  cli.py  config.py  conversation_registry.py  document_inspector_tool.py  document_registry.py  liteparse_client.py  main.py  nvidia_client.py  qdrant_store.py  rag_service.py  schemas.py
frontend/: Dockerfile  README.md  components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: chat-page.tsx  files-page.tsx  password-gate.tsx  pdf-viewer.tsx  sidebar.tsx
frontend/src/components/assistant-ui/: attachment.tsx  markdown-text.tsx  thread.tsx  tool-fallback.tsx  tooltip-icon-button.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  textarea.tsx
frontend/src/lib/: api.ts  auth.ts
scripts/: document_inspector.py  liteparse_parse.mjs
tests/: test_rag_service.py
