[project]
name = "lldoc-rag"
version = "0.1.0"
description = "LiteParse + Qdrant + NVIDIA RAG service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.src]
include = ["app"]
exclude = ["data"]
